examples/errors/undeclared_method.olang
Program: Main

class Main is
    this() is
        var a : Integer
        a := Integer(10)
        a.error()
    end
end